{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 11,
  "lineage": "932a0c6c-3579-6edc-346d-f6e040b7dc84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "pro_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:route-table/rtb-007f86e41f87a9396",
            "default_route_table_id": "rtb-007f86e41f87a9396",
            "id": "rtb-007f86e41f87a9396",
            "owner_id": "654654471175",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "pro_private"
            },
            "tags_all": {
              "Name": "pro_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0240326bf05f9c4ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pro_vpc",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pro_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:internet-gateway/igw-01e967995896cfdfb",
            "id": "igw-01e967995896cfdfb",
            "owner_id": "654654471175",
            "tags": {
              "Name": "pro_igw-33483"
            },
            "tags_all": {
              "Name": "pro_igw-33483"
            },
            "vpc_id": "vpc-0240326bf05f9c4ca"
          },
          "dependencies": [
            "aws_vpc.pro_vpc",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pro_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01e967995896cfdfb",
            "id": "r-rtb-03d98527b919f8f9a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d98527b919f8f9a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pro_igw",
            "aws_route_table.pro_public_rt",
            "aws_vpc.pro_vpc",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pro_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:route-table/rtb-03d98527b919f8f9a",
            "id": "rtb-03d98527b919f8f9a",
            "owner_id": "654654471175",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pro_public"
            },
            "tags_all": {
              "Name": "pro_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0240326bf05f9c4ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pro_vpc",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pro_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:subnet/subnet-0b80de80f96575ae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b80de80f96575ae0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654471175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pro_private_33483-1"
            },
            "tags_all": {
              "Name": "pro_private_33483-1"
            },
            "vpc_id": "vpc-0240326bf05f9c4ca"
          },
          "dependencies": [
            "aws_vpc.pro_vpc",
            "data.aws_availability_zones.available",
            "random_id.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:subnet/subnet-0920061dba6b81047",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0920061dba6b81047",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654471175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pro_private_33483-2"
            },
            "tags_all": {
              "Name": "pro_private_33483-2"
            },
            "vpc_id": "vpc-0240326bf05f9c4ca"
          },
          "dependencies": [
            "aws_vpc.pro_vpc",
            "data.aws_availability_zones.available",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pro_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:subnet/subnet-004566714ca4af59c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004566714ca4af59c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654471175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pro_public_33483-1"
            },
            "tags_all": {
              "Name": "pro_public_33483-1"
            },
            "vpc_id": "vpc-0240326bf05f9c4ca"
          },
          "dependencies": [
            "aws_vpc.pro_vpc",
            "data.aws_availability_zones.available",
            "random_id.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:subnet/subnet-01dd44cda709e1849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dd44cda709e1849",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654471175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pro_public_33483-2"
            },
            "tags_all": {
              "Name": "pro_public_33483-2"
            },
            "vpc_id": "vpc-0240326bf05f9c4ca"
          },
          "dependencies": [
            "aws_vpc.pro_vpc",
            "data.aws_availability_zones.available",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pro_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654471175:vpc/vpc-0240326bf05f9c4ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c7528dd5e9b807ed",
            "default_route_table_id": "rtb-007f86e41f87a9396",
            "default_security_group_id": "sg-01b61ba48ff00ee7a",
            "dhcp_options_id": "dopt-00ac1e55ec04eac38",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0240326bf05f9c4ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007f86e41f87a9396",
            "owner_id": "654654471175",
            "tags": {
              "Name": "pro_vpc-33483"
            },
            "tags_all": {
              "Name": "pro_vpc-33483"
            }
          },
          "dependencies": [
            "random_id.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}